# rust-packer

./: Cargo.toml  README.md
shared/: Cargo.toml
shared/src/: lib.rs  mem.rs  metadata.rs  section.rs
src/: bin.rs  lib.rs  packer.rs  unpacker.rs
src/packer/: encryption.rs  exception.rs
src/shared/: mem.rs  section.rs
src/unpacker/: encryption.rs  exception.rs
