[package]
name = "packer"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.8", features = ["consoleapi", "minwindef"] }
windows-sys = { version = "0.45.0", features = ["Win32_System_Threading", "Win32_System_Memory", "Win32_System_ProcessStatus", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Kernel"] }
anyhow = { version = "1.0.70" }
syn = { version = "2.0.10" }
clap = { version = "4.1.13", features = ["derive"] }
region = { version = "3.0.0" }
exe = { version = "0.5.6" }
once_cell = { version = "1.17.1" }
rand = { version = "0.8.5" }
state = { version = "0.5.3" }
lazy_static = { version = "1.4.0" }
shared = { path = "./shared/", version = "0.1.0" }

[lib]
name = "unpacker"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "packer"
path = "src/bin.rs"