[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exe = { version = "0.5.6" }
winapi = { version = "0.3.8", features = ["consoleapi", "minwindef"] }
windows-sys = { version = "0.45.0", features = ["Win32_System_Threading", "Win32_System_Memory", "Win32_Foundation", "Win32_System_Kernel"] }
anyhow = { version = "1.0.70" }
once_cell = { version = "1.17.1" }
page_size = { version = "0.4.2" }

[lib]
name = "shared"
crate-type = ["lib"]
path = "src/lib.rs"